Bug 477212 - Settings in the org.kde.kdeglobals.* group are unreadable
Summary: Settings in the org.kde.kdeglobals.* group are unreadable
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.27.80
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-18 23:06 UTC by kde.elm430
Modified: 2023-12-13 18:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kde.elm430 2023-11-18 23:06:30 UTC
SUMMARY
KDEGlobalsSettings::group() returns the wrong group identifier ("org.kde.TabletMode") which prevents reading any setting from this group.

STEPS TO REPRODUCE
1. Open qdbusviewer, navigate to org.freedesktop.portal.Desktop -> /org/freedesktop/portal/desktop/org.freedesktop.portal.Settings
2. Call ReadAll with e.g. "org.kde.kdeglobals.General"

OBSERVED RESULT
An empty result is returned

EXPECTED RESULT
The values of the specified group should be listed

SOFTWARE/OS VERSIONS
Windows: -
macOS: -
Linux/KDE Plasma: 6.6.1
(available in About System)
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-11-19 11:48:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/250
Comment 2 Nicolas Fella 2023-12-13 18:38:14 UTC
Git commit 52617f10ea8279589edc661412d2dba542c30368 by Nicolas Fella, on behalf of Bharadwaj Raju.
Committed on 13/12/2023 at 19:38.
Pushed by nicolasfella into branch 'master'.

Fix reading from org.kde.kdeglobals

Correct KDEGlobalsSettings group name, and since
org.kde.kdeglobals contains multiple sub-groups, groupMatches() needs
to be able to handle that. So now pattern "org.kde.kdeglobals.General" matches
group "org.kde.kdeglobals".

cc @sitter 

M  +5    -1    src/settings.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/52617f10ea8279589edc661412d2dba542c30368