Fix reading from org.kde.kdeglobals

Correct KDEGlobalsSettings group name, and since
org.kde.kdeglobals contains multiple sub-groups, groupMatches() needs
to be able to handle that. So now pattern "org.kde.kdeglobals.General" matches
group "org.kde.kdeglobals".

cc @sitter 

BUG: 477212